kmk 003 add tabindex tab 8

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a8/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a8/index.xhtml
@@ -41,7 +41,7 @@
 				active: workTimeSelectedTab,
 				direction: 'horizontal' }">
 					
-			<div class="personal-setting-tab-content">				
+			<div tabindex ="101" class="personal-setting-tab-content">				
 				<div class="personal-setting-tab-container" style="min-width: 1200px;">	
 				<table style="display: inline-block;">
 					<tr>
@@ -270,7 +270,7 @@
 				</div>	
 			</div>
 			
-			<div class="official-setting-tab-content">					
+			<div tabindex ="120" class="official-setting-tab-content">					
 				<table>
 					<tr>
 						<td colspan="4">
