--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -40,7 +40,7 @@
 				<div id="function-content">
 					<button class="proceed"
 						data-bind="enable: $root.errors.isEmpty , visible:showButton().available1, click: proceed ">#{i18n.getText('KDW003_4')}</button>
-					<button data-bind="visible: showButton().available4">#{i18n.getText('KDW003_5')}</button>
+					<button data-bind="visible: showButton().available4, click: proceedSave">#{i18n.getText('KDW003_5')}</button>
 					<button data-bind="visible: showButton().available2">#{i18n.getText('KDW003_6')}</button>
 					<button data-bind="visible: showButton().available3">#{i18n.getText('KDW003_12')}</button>
 					<button data-bind="click: employmentOk, visible:false">#{i18n.getText('KDW003_65')}</button>
