ccg013-d: fix error combox

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/013/d/index.xhtml
@@ -35,6 +35,7 @@
 							optionsText: 'systemName',
 							editable: false,
 							enable: true,
+							dropDownAttachedToBody: true,
 							columns: [
 								{ prop: 'systemName', length: 10 }
 							]}"></div>
