--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -60,7 +60,7 @@
 			data-bind="if: isQuickSearchTab||isAdvancedSearchTab, ntsTabPanel: { dataSource: tabs, active: selectedTab}">
 			<com:ko tag="if" bind="isQuickSearchTab">
 				<div tabindex="-1" class="tab-content-1">
-					<div tabindex="7" class="btn-quick-search" data-bind="if: isAllReferableEmployee, click: quickSearchEmployee">
+					<div tabindex="7" class="btn-quick-search" data-bind="if: isAllReferableEmployee, click: searchEmployeeOfDepOnly">
 						<div class="flex valign-center btn_big">
 							<i class="icon icon-28-allemployee"></i>
 							<label class="labelBigButton">#{i18n.getText('CCG001_10')}</label> 
