--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -6,16 +6,22 @@
 	<div class="cf" id="component-ccg001">
 		<div class="pull-left ccg001-content">
 			<div class="control-group ccg001-control-group">
-				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_27')}</div>
-				<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {
+			<com:ko tag="if" bind="showBaseDate">
+				<div class="control-group ccg001-control-group">
+					<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_27')}</div>
+					<div id="inp_baseDate" tabindex="1"
+						data-bind="ntsDatePicker: {
 					name: '#[CCG001_27]',
 					dateFormat: 'YYYY/MM/DD',
 					value: baseDate,
 					required: true }"></div>
-			</div>
-			<div class="control-group ccg001-control-group">
-				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_28')}</div>
-				<div id="cbb-closure" tabindex="2" style="display: inline-table" data-bind="ntsComboBox: {
+				</div>
+			</com:ko>
+			<com:ko tag="if" bind="showClosure">
+				<div class="control-group ccg001-control-group">
+					<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_28')}</div>
+					<div id="cbb-closure" tabindex="2" style="display: inline-table"
+						data-bind="ntsComboBox: {
 					name: '#[CCG001_28]',
 					options: closureList,
 					optionsValue: 'id',
@@ -27,67 +33,84 @@
 						{ prop: 'closureId', length: 1 },
 						{ prop: 'closureName', length: 5 },
 					]}"></div>
-			</div>
-			<div class="control-group ccg001-control-group">
-				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_29')}</div>
-				<com:ko tag="ifnot" bind="showPeriodYM">
-					<div id="inp-period-startYMD" tabindex="3" data-bind="ntsDatePicker: {
+				</div>
+			</com:ko>
+			<com:ko tag="if" bind="showPeriod">
+				<div class="control-group ccg001-control-group">
+					<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_29')}</div>
+					<com:ko tag="ifnot" bind="showPeriodYM">
+						<div id="inp-period-startYMD" tabindex="3"
+							data-bind="ntsDatePicker: {
 						name: '#[CCG001_30]',
 						dateFormat: 'YYYY/MM/DD',
 						value: periodStartDate,
 						required: true }"></div>
-						<div id="inp-period-endYMD" tabindex="4" data-bind="ntsDatePicker: {
+						<div id="inp-period-endYMD" tabindex="4"
+							data-bind="ntsDatePicker: {
 						name: '#[CCG001_31]',
 						dateFormat: 'YYYY/MM/DD',
 						value: periodEndDate,
 						required: true }"></div>
-				</com:ko>
-				<com:ko tag="if" bind="showPeriodYM">
-					<div id="inp-period-startYM" tabindex="3" data-bind="ntsDatePicker: {
+					</com:ko>
+					<com:ko tag="if" bind="showPeriodYM">
+						<div id="inp-period-startYM" tabindex="3"
+							data-bind="ntsDatePicker: {
 						name: '#[CCG001_30]',
 						dateFormat: 'YYYY/MM',
 						value: periodStartYm,
-						required: true }"></div> 
-						<div id="inp-period-endYM" tabindex="4" data-bind="ntsDatePicker: {
+						required: true }"></div>
+						<div id="inp-period-endYM" tabindex="4"
+							data-bind="ntsDatePicker: {
 						name: '#[CCG001_31]',
 						dateFormat: 'YYYY/MM',
 						value: periodEndYm,
-						required: true }"></div> 
-				</com:ko>
-				<button tabindex="5" id="zcxvzxcv" class="proceed" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
-			</div>
+						required: true }"></div>
+					</com:ko>
+					<button tabindex="5" id="zcxvzxcv" class="proceed" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
+				</div>
+			</com:ko>
+			
+		</div>
 		<div tabindex="6" id="tab-panel" class="cf ccg-tabpanel pull-left"
 			data-bind="if: isQuickSearchTab||isAdvancedSearchTab, ntsTabPanel: { dataSource: tabs, active: selectedTab}">
-			<com:ko tag="if" bind="isQuickSearchTab">
+			<com:ko tag="if" bind="isQuickSearchTab || !isAdvancedSearchTab">
 				<div tabindex="-1" class="tab-content-1">
-					<div tabindex="7" class="btn-quick-search" data-bind="if: isAllReferableEmployee, click: searchEmployeeOfDepOnly">
-						<div class="flex valign-center btn_big">
-							<i class="icon icon-28-allemployee"></i>
-							<label class="labelBigButton">#{i18n.getText('CCG001_10')}</label> 
+					<com:ko tag="if" bind="isAllReferableEmployee">
+						<div tabindex="7" class="btn-quick-search" data-bind="click: searchEmployeeOfDepOnly">
+							<div class="flex valign-center btn_big">
+								<i class="icon icon-28-allemployee"></i>
+								<label class="labelBigButton">#{i18n.getText('CCG001_10')}</label> 
+							</div>
+							<span class="controlSettingBg caret-right"></span>
 						</div>
-						<span class="controlSettingBg caret-right"></span>
-					</div>
-					<div tabindex="8" class="btn-quick-search" data-bind="if: isOnlyMe, click: getEmployeeLogin">
-						<div class="flex valign-center btn_big">
-							<i class="icon icon-26-onlyemployee"></i>
-							<label class="labelBigButton">#{i18n.getText('CCG001_11')}</label> 
+					</com:ko>
+					<com:ko tag="if" bind="isOnlyMe">
+						<div tabindex="8" class="btn-quick-search" data-bind="click: getEmployeeLogin">
+							<div class="flex valign-center btn_big">
+								<i class="icon icon-26-onlyemployee"></i>
+								<label class="labelBigButton">#{i18n.getText('CCG001_11')}</label> 
+							</div>
+							<span class="controlSettingBg caret-right"></span>
 						</div>
-						<span class="controlSettingBg caret-right"></span>
-					</div>
-					<div tabindex="9" class="btn-quick-search" data-bind="if: isEmployeeOfWorkplace, click: searchEmployeeOfDepOnly">
-						<div class="flex valign-center btn_small">
-							<i class="icon icon-48-ofworkplace"></i>
-							<label class="labelSmallButton">#{i18n.getText('CCG001_12')}</label> 
+					</com:ko>
+					<com:ko tag="if" bind="isEmployeeOfWorkplace">
+						<div tabindex="9" class="btn-quick-search" data-bind="click: searchEmployeeOfDepOnly">
+							<div class="flex valign-center btn_small">
+								<i class="icon icon-48-ofworkplace"></i>
+								<label class="labelSmallButton">#{i18n.getText('CCG001_12')}</label> 
+							</div>
+							<span class="controlSetting caret-right"></span>
 						</div>
-						<span class="controlSetting caret-right"></span>
-					</div>
-					<div tabindex="10" class="btn-quick-search" data-bind="if: isEmployeeWorkplaceFollow, click: searchEmployeeOfDepNotOn">
-						<div class="flex valign-center btn_small">
-							<i class="icon icon-49-workplacechild"></i>
-							<label class="labelSmallButton">#{i18n.getText('CCG001_13')}</label> 
+					</com:ko>
+					<com:ko tag="if" bind="isEmployeeWorkplaceFollow">
+						<div tabindex="10" class="btn-quick-search" data-bind="click: searchEmployeeOfDepNotOn">
+							<div class="flex valign-center btn_small">
+								<i class="icon icon-49-workplacechild"></i>
+								<label class="labelSmallButton">#{i18n.getText('CCG001_13')}</label> 
+							</div>
+							<span class="controlSetting caret-right"></span>
 						</div>
-						<span class="controlSetting caret-right"></span>
-					</div>
+					</com:ko>
 				</div>
 			</com:ko>
 			<com:ko tag="if" bind="isAdvancedSearchTab">
@@ -160,61 +183,71 @@
 										</div>
 									</div>
 								</div>
-								<div tabindex="12" class="accordion" id="EmploymentList"
-									data-bind="ntsAccordion: {enable: true}">
-									<h3>
-										<label>#{i18n.getText('CCG001_5')}</label>
-									</h3>
-									<div class="contentkcp">
-										<div id="employmentList" tabindex="7" style="width: 352px"></div>
+								<com:ko tag="if" bind="showEmployment">
+									<div tabindex="12" class="accordion" id="EmploymentList"
+										data-bind="ntsAccordion: {enable: true}">
+										<h3>
+											<label>#{i18n.getText('CCG001_5')}</label>
+										</h3>
+										<div class="contentkcp">
+											<div id="employmentList" tabindex="7" style="width: 352px"></div>
+										</div>
 									</div>
-								</div>
-								<div tabindex="13" class="accordion" id="ClassificationList"
-									data-bind="ntsAccordion: {enable: true}">
-									<h3>
-										<label>#{i18n.getText('CCG001_6')}</label>
-									</h3>
-									<div class="contentkcp">
-										<div tabindex="8" id="classificationList"></div>
+								</com:ko>
+								<com:ko tag="if" bind="showClassification">
+									<div tabindex="13" class="accordion" id="ClassificationList"
+										data-bind="ntsAccordion: {enable: true}">
+										<h3>
+											<label>#{i18n.getText('CCG001_6')}</label>
+										</h3>
+										<div class="contentkcp">
+											<div tabindex="8" id="classificationList"></div>
+										</div>
 									</div>
-								</div>
-								<div tabindex="14" class="accordion" id="JoptitleList"
-									data-bind="ntsAccordion: {enable: true}">
-									<h3>
-										<label>#{i18n.getText('CCG001_7',["Com_Jobtitle"])}</label>
-									</h3>
-									<div class="contentkcp">
-										<div tabindex="9" id="jobtitleList"></div>
+								</com:ko>
+								<com:ko tag="if" bind="showJobTitle">
+									<div tabindex="14" class="accordion" id="JoptitleList"
+										data-bind="ntsAccordion: {enable: true}">
+										<h3>
+											<label>#{i18n.getText('CCG001_7',["Com_Jobtitle"])}</label>
+										</h3>
+										<div class="contentkcp">
+											<div tabindex="9" id="jobtitleList"></div>
+										</div>
 									</div>
-								</div>
-								<div tabindex="15" class="accordion" id="WorkplaceList"
-									data-bind="ntsAccordion: {enable: true}">
-									<h3>
-										<label>#{i18n.getText('CCG001_8')}</label>
-									</h3>
-									<div class="contentkcpWorkplace">
-										<div tabindex="10" id="workplaceList"></div>
-										<button tabindex="11" id="btnDetailWorkplace"
-											data-bind="click: detailWorkplace">#{i18n.getText('CCG001_9')}</button>
+								</com:ko>
+								<com:ko tag="if" bind="showWorkplace">
+									<div tabindex="15" class="accordion" id="WorkplaceList"
+										data-bind="ntsAccordion: {enable: true}">
+										<h3>
+											<label>#{i18n.getText('CCG001_8')}</label>
+										</h3>
+										<div class="contentkcpWorkplace">
+											<div tabindex="10" id="workplaceList"></div>
+											<button tabindex="11" id="btnDetailWorkplace"
+												data-bind="click: detailWorkplace">#{i18n.getText('CCG001_9')}</button>
+										</div>
 									</div>
-								</div>
-								<div tabindex="16" class="accordion" id="WorkTypeList"
-									data-bind="ntsAccordion: {enable: true}">
-									<h3>
-										<label>#{i18n.getText('CCG001_58')}</label>
-									</h3>
-									<div class="contentkcp">
-										<table id="list-worktype" tabindex="2"
-										data-bind="ntsGridList: {
-											height: 235,
-											options: listWorkType,
-											optionsValue: 'workTypeCode',
-											columns: workTypeColumns,
-											multiple: true,
-											value: selectedWorkTypeCode
-										}"></table>
+								</com:ko>
+								<com:ko tag="if" bind="showWorktype">
+									<div tabindex="16" class="accordion" id="WorkTypeList"
+										data-bind="ntsAccordion: {enable: true}">
+										<h3>
+											<label>#{i18n.getText('CCG001_58')}</label>
+										</h3>
+										<div class="contentkcp">
+											<table id="list-worktype" tabindex="2"
+											data-bind="ntsGridList: {
+												height: 235,
+												options: listWorkType,
+												optionsValue: 'workTypeCode',
+												columns: workTypeColumns,
+												multiple: true,
+												value: selectedWorkTypeCode
+											}"></table>
+										</div>
 									</div>
-								</div>
+								</com:ko>
 							</div>
 							<div class="pull-left" style="height: 100%">
 								<div tabindex="17" class="ccg-btn-vertical" data-bind="click: advancedSearchEmployee">
