--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/001/a/index.xhtml
@@ -10,7 +10,7 @@
 				<com:ValidatorScript>
 					nts.uk.shr.com.time.TimeWithDayAttr
 				</com:ValidatorScript>
-				<script>var dialogSize = { width: 1150, height: 600 };</script>
+				<script>var dialogSize = { width: 950, height: 520 };</script>
 				<com:scriptfile set="IGNITE" />
 				<com:scriptfile path="kdl001.a.start.js" />
 				<com:scriptfile path="kdl001.a.vm.js" />
@@ -31,7 +31,7 @@
 								optionsValue: 'code',
 								optionsText: 'name',
 								value: searchOption,
-								enable: true }"></span>
+								enable: isEnableSwitchButton }"></span>
 					</div>	
 					<div id="search-div" class="control-group valign-center">					
 						<input class= "inputTime" id="inputStartTime" data-bind="ntsTimeWithDayEditor: {name: '#[KDL001_21]', value: startTime, constraint:'TimeWithDayAttr',enable: true, readonly: false, required: false}" />
@@ -42,8 +42,8 @@
 					</div>		
 					<div id="day-list-div">
 						<table id="day-list-tbl" data-bind="ntsGridList: {
-									width: 1100,
-									height: 355,
+									width: 900,
+									height: 260,
 									options: selectAbleItemList,
 									optionsValue: 'code',
 									columns: columns,
