fix bug kmf002: NUK-1279

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -9,6 +9,7 @@
 		
 	<ui:composition>
 		<div class="sidebar-content-header">
+			<span>#{i18n.getText('KMF002_30')}</span>
    			<!-- A2_1 -->
    			<button tabindex="1" data-bind="click: save, attr : {'disabled' : false}, ">#{i18n.getText('KMF002_2')}</button>
    			<!-- A2_2 -->
