--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/kmf002.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/kmf002.a.main.css
@@ -50,11 +50,15 @@
 	align-items: center;	
 }
 
-.sidebar-content-header > button:nth-child(1) {
-	margin-left: 100px;
+.sidebar-content-header > span:nth-child(1) {
+	margin-left: 55px;
 }
 
 .sidebar-content-header > button:nth-child(2) {
+	margin-left: 60px;
+}
+
+.sidebar-content-header > button:nth-child(3) {
 	margin-left: 60px;
 } 
 
