--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/e/index.xhtml
@@ -7,8 +7,8 @@
 
 <body>
 	<ui:composition >
-		
 		<div class="sidebar-content-header">
+			<span>#{i18n.getText('Com_Company')}</span>
    			<!-- E1_1 -->
    			<button tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- E1_2 -->
