--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/c/index.xhtml
@@ -8,6 +8,7 @@
 <body>
 	<ui:composition>
 		<div class="sidebar-content-header">
+		<span>#{i18n.getText('Com_Person')}</span>
 			<!-- C1_1 -->
    			<button tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- C1_2 -->
