--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/d/index.xhtml
@@ -9,6 +9,7 @@
 	<ui:composition>
 	
 		<div class="sidebar-content-header">
+			<span>#{i18n.getText('Com_Employment')}</span>
    			<!-- D1_1 -->
    			<button tabindex="1" data-bind="click: save, enable: enableSave">#{i18n.getText('KMF002_2')}</button>
    			<!-- D1_2 -->
