sua theo yeu cau cua ohashi san

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdl/001/a/index.xhtml
@@ -43,7 +43,7 @@
 					<div id="day-list-div">
 						<table id="day-list-tbl" data-bind="ntsGridList: {
 									width: 900,
-									height: 260,
+									height: gridHeight,
 									options: selectAbleItemList,
 									optionsValue: 'code',
 									columns: columns,
