fixbug 87982: insert html

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/a1/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/a1/index.xhtml
@@ -48,6 +48,7 @@
 												optionsText: 'name',
 												editable: false,
 												enable: true,
+												visibleItemsCount: 5,
 												dropDownAttachedToBody: true,
 												columns: [
 													{ prop: 'name', length: 10 },
@@ -62,6 +63,7 @@
 												optionsText: 'name',
 												editable: false,
 												enable: true,
+												visibleItemsCount: 5,
 												dropDownAttachedToBody: true,
 												columns: [
 													{ prop: 'name', length: 10 },
