--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/b/index.xhtml
@@ -48,9 +48,11 @@
 								options: comboItemsAfterLogin,
 								optionsValue: 'uniqueCode',
 								value: selectedItemAfterLogin,
+								visibleItemsCount: 5,
 								optionsText: 'name',
 								editable: false,
 								enable: true,
+								dropDownAttachedToBody: true,
 								columns: [
 									{ prop: 'name', length: 10 },
 								]}"></div>
@@ -61,9 +63,11 @@
 							options: comboItemsAsTopPage,
 							optionsValue: 'code',
 							value: selectedItemAsTopPage,
+							visibleItemsCount: 5,
 							optionsText: 'name',
 							editable: false,
 							enable: true,
+							dropDownAttachedToBody: true,
 							columns: [
 								{ prop: 'name', length: 10 },
 							]}"></div>
