--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/b/index.xhtml
@@ -25,9 +25,9 @@
 				<!--  <button tabindex="3" class="copy"  data-bind="click: copy">#{i18n.getText('KDW002_14')}</button>-->
 				<!--  <label class="mylabel">#{i18n.getText('KDW002_1')}</label> -->
 			</div>
-			<div id="contents-area">
+			<div id="contents-area" class="fixed-flex-layout">
 				<!-- <div class="container">  -->
-					<div class="leftpanel"
+					<div class="fixed-flex-layout-left"
 						data-bind="ntsPanel:{ direction: 'right', visible: true}">
 						<label class="leftLabel">#{i18n.getText('KDW002_9')}</label>
 						<table id="leftGrid"
@@ -42,10 +42,12 @@
 								value: bussinessCurrentCode
 							}"></table>
 					</div>
+					<div class="fixed-flex-layout-right">
 					<input type="text" class="searchText" placeholder="コード／名称で検索"
 						data-bind="value: txtSearch" />
 					<button class="searchButton" data-bind="click: searchData">検索</button>
 					<table id="grid"></table>
+					</div>
 				<!-- </div> -->
 			</div>
 		</ui:define>
