--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/c/kdw002.c.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/002/c/kdw002.c.main.css
@@ -32,7 +32,7 @@
 }
 
 #grid_container {
-	width: 1034px !important;
+	width: 682px !important;
 }
 
 .proceed {
@@ -86,8 +86,9 @@ td:nth-child(3), td:nth-child(4), td:nth-child(5) {
 	background-color: #f2f2f2;
 }
 
-.leftpanel {
-	float: left;
+.fixed-flex-layout-left {
+	 width: 305px !important;
+    height: 260px !important;
 }
 
 .leftLabel {
