--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/catalog.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/catalog.css
@@ -62,7 +62,7 @@ note:before{position:absolute;display:block;content:'';width:50px;height:15px;le
 /*** Component ***/
 .feature-box {display:inline-block;width:calc(100% - 30px);border:1px solid #bbb;border-radius: 5px;overflow:hidden;margin:5px 15px;box-sizing:border-box;transition:box-shadow 0.2s;}
 .feature-box:hover {box-shadow:0 1px 5px 1px rgba(0,0,0,0.25);}
-.feature-box > .header {background:linear-gradient(to bottom, #fafafa, #cccccc 100%);padding:7px 10px;}
+.feature-box > .header { font-size: 15px; font-weight: bold; background:linear-gradient(to bottom, #fafafa, #cccccc 100%);padding:7px 10px;}
 .feature-box > .header > * {margin:0;}
 .feature-box > .content {padding:10px;}
 
@@ -78,6 +78,15 @@ note:before{position:absolute;display:block;content:'';width:50px;height:15px;le
     0% { background-color: none;}
     50% { background-color: #ffb;}
     100% { background-color: none;}
+}
+
+table.matrix {
+	border: solid 1px #000;
+	border-collapse: collapse;
+}
+table.matrix th,td {
+	border: solid 1px #000;
+	padding: 5px;
 }
 
 /*** Theme ***/
