--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -338,7 +338,7 @@
 											</div>
 											<div tabindex="53" class="tab-a3">
 												<div class="tab-outline" data-bind="ntsKMK003A3: {enum: settingEnum, isDetailMode: isDetailMode,
-													useHalfDay: useHalfDay, mainModel: mainSettingModel, isLoading: isLoading}">
+													useHalfDay: useHalfDay, mainModel: mainSettingModel, isLoading: isLoading, isClickSave: isClickSave }">
 												</div>
 											</div>
 											<div tabindex="60" class="tab-a4">
@@ -357,7 +357,7 @@
 											</div>
 											<div tabindex="88" class="tab-a6">
 												<div class="tab-outline" data-bind="ntsKMK003A6: {enum: settingEnum, 
-													mainModel: mainSettingModel, isLoading: isLoading}">
+													mainModel: mainSettingModel, isLoading: isLoading, isClickSave: isClickSave }">
 												</div>
 											</div>
 											<div tabindex="91" class="tab-a7">
