[CCG001] update sample screen

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -32,18 +32,45 @@
 				<div id="content" class="cf">
 					<div id="ccgcomponent"></div>
 					<h1>CCG001 社員範囲選択 （共通部品） Employee range selection</h1>
-					<h2>Overview</h2>
-					<div class="pull-left left-options" style="margin-right: 100px">
-						<div data-bind="ntsCheckBox:{checked: isQuickSearchTab}">Show/hide tab クイック検索</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show/hide tab 詳細検索タブ</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isAllReferableEmployee}">Show/hide button 参照可能な社員すべて</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isOnlyMe}">Show/hide button 自分だけ</div><br/>
+					<div class="table">
+					<div class="cell">
+						<h2>Common properties:</h2>
+						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Show EmployeeList (検索タイプ)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isQuickSearchTab}">systemType (システム区分)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isQuickSearchTab}">Show QuickSearch (クイック検索)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show AdvancedSearch (詳細検索タブ)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show BaseDate (基準日利用)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show Closure (就業締め日利用)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show All Closure (全締め表示)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show Period (対象期間利用)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isAdvancedSearchTab}">Show period YM/YMD (対象期間精度)</div><br/>
 					</div>
-					<div class="right-options">
-						<div data-bind="ntsCheckBox:{checked: isEmployeeOfWorkplace}">Show/hide button おなじ職場の社員</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show/hide button おなじ＋配下の職場の社員</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isMutipleCheck}">Enable/disable multiple selection</div><br/>
-						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Show  全社員タイプ / 社員指定タイプ</div>
+					<div class="cell">
+						<h2>Required param properties:</h2>
+						<div data-bind="ntsCheckBox:{checked: isMutipleCheck}">In service (在職区分)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Leave of absence (休職区分)</div>
+						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Close (休業区分)</div>
+						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Retirement (退職区分)</div>
+					</div>
+					<div class="cell">
+						<h2>Quick search properties:</h2>
+						<div data-bind="ntsCheckBox:{checked: isAllReferableEmployee}">Show AllReferableEmployee (参照可能な社員すべて)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isOnlyMe}">Show Only me (自分だけ)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isEmployeeOfWorkplace}">Show Employee of workplace (同じ職場の社員)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show Employee of workplace follow (同じ職場とその配下の社員)</div><br/>
+					</div>
+					<div class="cell">
+						<h2>Advanced search properties:</h2>
+						<div data-bind="ntsCheckBox:{checked: isEmployeeOfWorkplace}">Show Employment (雇用条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show workplace (職場条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show classification (分類条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show jobtitle (職位条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isEmployeeWorkplaceFollow}">Show worktype (勤種条件)</div><br/>
+						<div data-bind="ntsCheckBox:{checked: isMutipleCheck}">Enable multiple selection (選択モード)</div><br/>
+					</div>
+					</div>
+					<div class="table" style="width: auto; margin: auto">
+						<button data-bind="click: reloadCcg001">Reload Component</button>
 					</div>
 					<hr/>
 					<div style="margin-left: 100px;">
