CMM045: ui hien thi mode application

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -11,9 +11,10 @@
 			<com:scriptfile path="/lib/generic/igniteui/js/extensions/infragistics.datasource.knockoutjs.js"  of="/nts.uk.com.js.web"/>
 			<com:scriptfile path="/lib/generic/igniteui/js/extensions/infragistics.ui.grid.knockout-extensions.js"  of="/nts.uk.com.js.web"/>
 			<com:stylefile path="cmm045.a.main.css" />
-			<com:scriptfile path="cmm045.a.start.js" />
+			<com:scriptfile path="../shr/cmm045.shr.vmbase.js" />
 			<com:scriptfile path="cmm045.a.vm.js" />
 			<com:scriptfile path="cmm045.a.service.js" />
+			<com:scriptfile path="cmm045.a.start.js" />
 		</ui:define>
 		<ui:define name="content">
 			<div id="functions-area">
@@ -30,7 +31,10 @@
 			
 			</div>
 			<div id="content-area">
-			<div style = "margin-left: 20px;" class="compact-grid">
+<!-- 			<div style = "margin-left: 20px; margin-top: 50px;" class="compact-grid">
+					<table id="grid21"></table>
+			</div> -->
+			<div style = "margin-left: 20px; margin-top: 50px;" class="compact-grid">
 					<table id="grid2"></table>
 			</div>
 			</div>
