CMM045: ui hien thi thong tin don xin mode don xin

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/cmm/045/a/index.xhtml
@@ -31,6 +31,10 @@
 			
 			</div>
 			<div id="content-area">
+				<div>
+					<!-- <div data-bind="ntsFormLabel: {}">#{i18n.getText('CMM045_29')}</div> -->
+					
+				</div>
 <!-- 			<div style = "margin-left: 20px; margin-top: 50px;" class="compact-grid">
 					<table id="grid21"></table>
 			</div> -->
