update lable cas003

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/003/a/index.xhtml
@@ -178,6 +178,8 @@
 														option: { width: '60px' },
 														required: true, 
 														enable: accLockCheck}" />
+								<!-- A3_008 -->						
+								<label>#{i18n.getText('CAS003_31')}</label>						
 							</div>
 							<div class="contentPassComplex1">
 								<label>#{i18n.getText('CAS003_30')}</label> <input tabindex="14" id="txtErrorCount"
@@ -188,8 +190,8 @@
 														option: { width: '60px' },
 														required: true, 
 														enable: accLockCheck}" />
-								<label>#{i18n.getText('CAS003_31')}</label> <label class="labelInfo1">#{i18n.getText('CAS003_32')}</label>
-								<!-- CAS003_31 va CAS003_32 chua dung -->
+								<!-- A3_007 -->	
+								<label>#{i18n.getText('CAS003_33')}</label> 
 							</div>
 						</div>
 
