--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/031/a/index.xhtml
@@ -9,11 +9,12 @@
 	<ui:composition template="../../../../master/base.xhtml">
 		<ui:define name="htmlHead">
 			<script>var dialogSize = { width: 1080, height: 825 };</script>
-			<com:scriptfile path="../../common/model.js" />
+			<com:scriptfile path="/view/ccg/common/model.js" />
+			<com:scriptfile path="/view/ccg/common/positionUtility.js" />
 			<com:scriptfile path="ccg031.a.service.js" />
 			<com:scriptfile path="ccg031.a.vm.js" />
 			<com:scriptfile path="ccg031.a.start.js" />
-			<com:stylefile path="../../common/common.css" />
+			<com:stylefile path="/view/ccg/common/common.css" />
 			<com:stylefile path="ccg031.a.style.css" />
 		</ui:define>
 
