--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/common/common.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/common/common.css
@@ -21,7 +21,7 @@
 .layout-cell.hover:after {}
 
 /* Widget Panel Component */
-.widget-panel {border:1px solid #B1B1B1; box-shadow:0 5px 0 #2FCC71 inset; padding:10px; box-sizing:border-box; }
+.widget-panel {border:1px solid #B1B1B1; width: 150px; height: 150px; box-shadow:0 5px 0 #2FCC71 inset; padding:10px; box-sizing:border-box; }
 .widget-panel .panel-header {border-bottom:1px solid #B1B1B1; height:30px; padding-bottom:10px; margin-bottom:10px; box-sizing:border-box;}
 .widget-panel .panel-header .square {display:inline-block; width:18px; height:18px; vertical-align: middle; margin-right: 10px;}
 .widget-panel .panel-header .square.green {background-color: #2FCC71;}
