--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/index.xhtml
@@ -103,7 +103,7 @@
 				</div>
 				<div class="cell valign-center">
 					<!--A4_7 選択ボタン-->
-					<button tabindex="7" class="workSelectHoliday"
+					<button tabindex="7" class="workSelect"
 						data-bind="enable: true,click : openDialogKdl003">#{i18n.getText('KAF010_36')}</button>
 				</div>
 				<div class="cell valign-center">
