--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/kaf010.cm.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/010/cm/kaf010.cm.main.css
@@ -72,7 +72,7 @@ div.form-label.broken {
 	vertical-align: top;
 }
 
-.workSelectHoliday{
+.workSelect{
     height: 70px;
     margin-left: 45px;
 }
