fix bug KMF002: NUK-1285

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
@@ -53,13 +53,13 @@
 				<li data-bind="click: onSelectTabA"><a tabindex="-1"
 					href="#tabpanel-1" role="tab-navigator" class="active">#{i18n.getText('KMF002_30')}</a></li>
 				<li data-bind="click: onSelectTabE"><a tabindex="-1"
-					href="#tabpanel-2" role="tab-navigator" class="active">#{i18n.getText('Com_Company')}</a></li>
+					href="#tabpanel-2" role="tab-navigator">#{i18n.getText('Com_Company')}</a></li>
 				<li data-bind="click: onSelectTabB"><a tabindex="-1"
-					href="#tabpanel-3" role="tab-navigator" class="active">#{i18n.getText('Com_Workplace')}</a></li>
+					href="#tabpanel-3" role="tab-navigator">#{i18n.getText('Com_Workplace')}</a></li>
 				<li data-bind="click: onSelectTabD"><a tabindex="-1"
-					href="#tabpanel-4" role="tab-navigator" class="active">#{i18n.getText('Com_Employment')}</a></li>
+					href="#tabpanel-4" role="tab-navigator">#{i18n.getText('Com_Employment')}</a></li>
 				<li data-bind="click: onSelectTabC"><a tabindex="-1"
-					href="#tabpanel-5" role="tab-navigator" class="active">#{i18n.getText('Com_Person')}</a></li>
+					href="#tabpanel-5" role="tab-navigator">#{i18n.getText('Com_Person')}</a></li>
 				
 			</ul>
 		</ui:define>
