--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/index.xhtml
@@ -57,72 +57,80 @@
 		</ui:define>
 		<ui:define name="content">
 			<div id="functions-area">
-				<div style="min-width: 1290px">
+				<div>
 					<!-- B1_1 -->
 					<a class="goback" data-bind="ntsLinkButton: { jump: '../test/index.xhtml' }">#{i18n.getText('KAF000_14')}</a>
 					<!-- B1_2 -->
-					<button data-bind="click: btnBefore, enable: enableBefore" ><i class="icon icon-button-arrow-left"></i></button>
+					<button class="kaf000-function-btn" data-bind="click: btnBefore, enable: enableBefore" ><i class="icon icon-button-arrow-left"></i></button>
 					<!-- B1_3 -->
-					<button data-bind="click: btnAfter, enable: enableAfter"><i class="icon icon-button-arrow-right"></i></button>
-					<!-- B1_4 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayApprovalButton">
-						<button class="proceed" data-bind="click: btnApprove, 
-													enable: enableApprovalButton() &amp;&amp; $root.errors.isEmpty()
-													">#{i18n.getText('KAF000_15')}</button>		
+					<button class="kaf000-function-btn" data-bind="click: btnAfter, enable: enableAfter"><i class="icon icon-button-arrow-right"></i></button>
+					<div style="display: inline-block;">
+						<!-- B1_4 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayApprovalButton">
+							<button class="proceed kaf000-function-btn" data-bind="click: btnApprove, 
+														enable: enableApprovalButton() &amp;&amp; $root.errors.isEmpty()
+														">#{i18n.getText('KAF000_15')}</button>		
+						</div>
+						<!-- B1_14 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayApprovalLabel">
+							<div class="comment">
+								<label>【承認】</label>
+							</div>		
+						</div>
+						<!-- B1_5 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayDenyButton">
+							<button class="kaf000-function-btn" data-bind="click: btnDeny, 
+										enable: enableDenyButton() &amp;&amp; $root.errors.isEmpty()
+										">#{i18n.getText('KAF000_16')}</button>		
+						</div>
+						<!-- B1_15 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayDenyLabel">
+							<div class="comment">
+								<label>【否認】</label>
+							</div>		
+						</div>
+						<!-- B1_6 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayRemandButton">
+							<button class="kaf000-function-btn" data-bind="enable: enableRemandButton() &amp;&amp; $root.errors.isEmpty()
+										   ">#{i18n.getText('KAF000_17')}</button>		
+						</div>
+						<!-- B1_7 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayReleaseButton">
+							<button class="kaf000-function-btn" data-bind="click: btnRelease, 
+										enable: enableReleaseButton() &amp;&amp; $root.errors.isEmpty()
+										">#{i18n.getText('KAF000_18')}</button>		
+						</div>
 					</div>
-					<!-- B1_14 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayApprovalLabel">
-						<div class="comment">
-							<label>【承認】</label>
-						</div>		
+					<div class="kaf000-function-div-update">
+						<!-- B1_8 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayUpdateButton">
+							<button class="proceed kaf000-function-btn" data-bind="click: update, enable : enableUpdateButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_19')}</button>	
+								
+						</div>
+						<!-- B1_9 -->
+						<div class="controlButtonCell_kaf000">
+							<button class="kaf000-function-btn">#{i18n.getText('KAF000_20')}</button>		
+						</div>
+						<!-- B1_10 -->
+						<div class="controlButtonCell_kaf000">
+							<button class="kaf000-function-btn" data-bind="click: btnReferences" >#{i18n.getText('KAF000_21')}</button>		
+						</div>
+						<!-- B1_11 -->
+						<div class="controlButtonCell_kaf000">
+							<button class="kaf000-function-btn" data-bind="click: btnSendEmail" >#{i18n.getText('KAF000_22')}</button>		
+						</div>
 					</div>
-					<!-- B1_5 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayDenyButton">
-						<button data-bind="click: btnDeny, 
-									enable: enableDenyButton() &amp;&amp; $root.errors.isEmpty()
-									">#{i18n.getText('KAF000_16')}</button>		
+					<div class="kaf000-function-div-delete">
+						<!-- B1_12 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayDeleteButton">
+							<button class="danger kaf000-function-btn" data-bind="click: btnDelete, enable : enableDeleteButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_23')}</button>		
+						</div>
 					</div>
-					<!-- B1_15 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayDenyLabel">
-						<div class="comment">
-							<label>【否認】</label>
-						</div>		
-					</div>
-					<!-- B1_6 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayRemandButton">
-						<button data-bind="enable: enableRemandButton() &amp;&amp; $root.errors.isEmpty()
-									   ">#{i18n.getText('KAF000_17')}</button>		
-					</div>
-					<!-- B1_7 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayReleaseButton">
-						<button data-bind="click: btnRelease, 
-									enable: enableReleaseButton() &amp;&amp; $root.errors.isEmpty()
-									">#{i18n.getText('KAF000_18')}</button>		
-					</div>
-					<!-- B1_8 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayUpdateButton">
-						<button class="proceed" data-bind="click: update, enable : enableUpdateButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_19')}</button>	
-							
-					</div>
-					<!-- B1_9 -->
-					<div class="controlButtonCell_kaf000">
-						<button >#{i18n.getText('KAF000_20')}</button>		
-					</div>
-					<!-- B1_10 -->
-					<div class="controlButtonCell_kaf000">
-						<button data-bind="click: btnReferences" >#{i18n.getText('KAF000_21')}</button>		
-					</div>
-					<!-- B1_11 -->
-					<div class="controlButtonCell_kaf000">
-						<button data-bind="click: btnSendEmail" >#{i18n.getText('KAF000_22')}</button>		
-					</div>
-					<!-- B1_12 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayDeleteButton">
-						<button  class="danger" data-bind="click: btnDelete, enable : enableDeleteButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_23')}</button>		
-					</div>
-					<!-- B1_13 -->
-					<div class="controlButtonCell_kaf000" data-bind="if: displayCancelButton">
-						<button  class="danger" data-bind="click: btnCancel, enable : enableCancelButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_24')}</button>		
+					<div class="kaf000-function-div-cancel">
+						<!-- B1_13 -->
+						<div class="controlButtonCell_kaf000" data-bind="if: displayCancelButton">
+							<button class="danger kaf000-function-btn" data-bind="click: btnCancel, enable : enableCancelButton() &amp;&amp; $root.errors.isEmpty()">#{i18n.getText('KAF000_24')}</button>		
+						</div>
 					</div>
 					<br></br>
 				</div>
@@ -143,22 +151,27 @@
 						</tr>
 					</table>
 				</div>
-				<!-- row2 -->
-				<div id="message-area" style="margin-top: 16px;" data-bind="visible: !displayButtonControl().displayReturnReasonPanel()">
-					<!-- B3_1 -->
-					<div class="message-td" data-bind="text : reasonApp, visible: !displayButtonControl().displayReturnReasonPanel()"></div>
+				
+				<div data-bind="if: displayReturnReasonPanel">
+					<!-- row2 -->
+					<div id="message-area" style="margin-top: 16px;">
+						<!-- B3_1 -->
+						<div class="message-td" data-bind="text : reasonApp"></div>
+					</div>
 				</div>
-				<!-- row 2 B4_1-->
-				<div style=" margin-top: 16px;float: left;margin-right: 47px" data-bind="visible: !displayButtonControl().displayReturnReason() ">
-					<div  data-bind="ntsFormLabel: {constraint: 'ApproverReason'}">#{i18n.getText('KAF000_28')}</div>
-				</div>
-				<!-- row 2 B4_2-->
-				<div style=" margin-top: 16px;">
-					<textarea style="width: 628px;height: 50px" data-bind="ntsMultilineEditor: { value: reasonToApprover, 
-																								constraint: 'ApproverReason',
-																								enable: displayButtonControl().enableReturnReason},
-																								visible: !displayButtonControl().displayReturnReason() " />
-					
+				
+				<div data-bind="if: displayApprovalReason">
+					<!-- row 2 B4_1-->
+					<div style=" margin-top: 16px;float: left;margin-right: 47px">
+						<div  data-bind="ntsFormLabel: {constraint: 'ApproverReason', enable: enableApprovalReason}">#{i18n.getText('KAF000_28')}</div>
+					</div>
+					<!-- row 2 B4_2-->
+					<div style=" margin-top: 16px;">
+						<textarea style="width: 628px;height: 50px" data-bind="ntsMultilineEditor: { value: reasonToApprover, 
+																									constraint: 'ApproverReason',
+																									enable: enableApprovalReason() &amp;&amp; $root.errors.isEmpty()}" />
+						
+					</div>
 				</div>
 				
 				<!-- Body -->
