--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/kaf000.b.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/000/b/kaf000.b.main.css
@@ -6,7 +6,7 @@
 }
 .comment{
 	width: 50px;
-    padding-left: 20px;
+    padding-left: 15px;
 	display: inline-block;
 }
 
@@ -50,5 +50,21 @@
 	padding-left: 5px;
 }
 .controlButtonCell_kaf000 {
+	display: inline-block;
+}
+.kaf000-function-btn {
+	margin-left: 0.1vw !important;
+	margin-right: 0px !important;
+}
+.kaf000-function-div-update{
+	margin-left: calc(10vw - 102px);
+	display: inline-block;
+}
+.kaf000-function-div-delete {
+	margin-left: calc(10vw - 102px);
+	display: inline-block;
+}
+.kaf000-function-div-cancel {
+	margin-left: calc(15vw - 153px);
 	display: inline-block;
 }
