fix css KSM001 G

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/g/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/g/index.xhtml
@@ -70,18 +70,18 @@
 							<tbody>
 								<tr>
 									<td>
-										<div class="lableData pull-left" data-name="#{i18n.getText('KSM001_91')}"
+										<div class="lableData pull-left" style="width: 265px;" data-name="#{i18n.getText('KSM001_91')}"
 											data-bind="ntsFormLabel: {required: false}">
 											#{i18n.getText('KSM001_91')}
 										</div>
 										<p class="line"></p>
 									</td>
-									<td style="padding-left: 240px">
-										<div class="lableData pull-left" data-name="#{i18n.getText('KSM001_93')}"
+									<td>
+										<div class="lableData pull-left" style="width: 265px; margin-left: 80px" data-name="#{i18n.getText('KSM001_93')}"
 											data-bind="ntsFormLabel: {required: true}">
 											#{i18n.getText('KSM001_93')}
 										</div>
-										<p class="line"></p>
+										<p class="line" style="margin-left: 80px"></p>
 									</td>
 								</tr>
 							</tbody>
